half of the init

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,10 +1,19 @@
 ﻿target_include_directories (LodeRunner PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-target_sources (LodeRunner PRIVATE   "Enemy.h"
-                                     "EndGame.h"
-                                     "EnemyController.h"
-                                     "Entity.h"
+
+target_sources (LodeRunner PRIVATE "GameController.h"
+                                   "Screens.h"
+                                   "Game.h"
+                                   "Map.h")
+
+#[[
+"Enemy.h"
+"EndGame.h"
+"EnemyController.h"
+                                     "Object.h"
+                                     "DinamicObject.h"
+                                     "StaticObject.h"
                                      "Game.h"
-                                     "GameController.h"
+                                     
                                      "Hud.h"
                                      "Lives.h"
                                      "Macros.h"
@@ -15,4 +24,5 @@ target_sources (LodeRunner PRIVATE   "Enemy.h"
                                      "PlayerController.h"
                                      "Views.h"
                                      "Algorithms.h"
-                                  )
+
+]]
