--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,9 @@
 ﻿target_sources (LodeRunner PRIVATE   "main.cpp"
+                                     "GameController.cpp"
+                                     "Screens.cpp"
+                                     "Game.cpp"
+                                     "Object.cpp"
+                                     "StaticObject.cpp"
                                   )
                                    
                                    
