--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,12 @@
 ﻿target_sources (LodeRunner PRIVATE   "main.cpp"
                                      "GameController.cpp"
                                      "Screens.cpp"
+                                     "Map.cpp"
+
                                      "Game.cpp"
                                      "Object.cpp"
                                      "StaticObject.cpp"
+                                     "DynamicObject.cpp"
                                   )
                                    
                                    
