--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -6,4 +6,5 @@ configure_file ("./skins/player.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./skins/rope.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./skins/wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./skins/coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./skins/background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Board.txt" ${CMAKE_BINARY_DIR} COPYONLY)
