moving player without the laws of physics

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@
                                      "GameController.cpp"
                                      "Screens.cpp"
                                      "Map.cpp"
+                                     "Player.cpp"
+                                     "PlayerController.cpp"
                                      "Enemy.cpp"
                                      "EnemyContorller.cpp"
                                      "Game.cpp"
