--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@
                                      "VeryStupid.cpp"
                                      "StaticObject.cpp"
                                      "DynamicObject.cpp"
+                                     "RandomPath.cpp"
                                   )
                                    
                                    
