--- a/src/Game/CMakeLists.txt
+++ b/src/Game/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿target_sources (LodeRunner PRIVATE   "Game.cpp"
-				     "Map.cpp"
+				                     "Map.cpp"
+                                     "MapData.cpp"
                                   )
                                    
                                    
