--- a/src/AbstractClases/CMakeLists.txt
+++ b/src/AbstractClases/CMakeLists.txt
@@ -3,5 +3,6 @@
                                      "Object.cpp"
                                      "StaticObject.cpp"
                                      "DynamicObject.cpp"
-                     
+                                     "MovementController.cpp"
+                
                                   )
