--- a/src/Game/CMakeLists.txt
+++ b/src/Game/CMakeLists.txt
@@ -1,6 +1,7 @@
 ﻿target_sources (LodeRunner PRIVATE   "Game.cpp"
 				                     "Map.cpp"
                                      "MapData.cpp"
+                                     "Score.cpp"
                                   )
                                    
                                    
