--- a/src/AbstractClases/CMakeLists.txt
+++ b/src/AbstractClases/CMakeLists.txt
@@ -4,5 +4,6 @@
                                      "StaticObject.cpp"
                                      "DynamicObject.cpp"
                                      "MovementController.cpp"
-                
+                                     "Consumables.cpp"
+
                                   )
