--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,3 +9,21 @@ configure_file ("./skins/wall.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./skins/coin.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./skins/background.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Board.txt" ${CMAKE_BINARY_DIR} COPYONLY)
+
+
+
+configure_file ("./hud pngs/number0.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number1.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number2.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number3.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number4.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number5.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number6.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number7.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number8.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/number9.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+configure_file ("./hud pngs/score.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/hert.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/time.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./hud pngs/lvl.png" ${CMAKE_BINARY_DIR} COPYONLY)
