--- a/src/Game/CMakeLists.txt
+++ b/src/Game/CMakeLists.txt
@@ -2,6 +2,7 @@
 				                     "Map.cpp"
                                      "MapData.cpp"
                                      "Score.cpp"
+                                     "Hud.cpp"
                                   )
                                    
                                    
