--- a/src/AbstractClases/CMakeLists.txt
+++ b/src/AbstractClases/CMakeLists.txt
@@ -5,5 +5,5 @@
                                      "DynamicObject.cpp"
                                      "MovementController.cpp"
                                      "Consumables.cpp"
-
+                                     "Button.cpp"
                                   )
