--- a/src/MainMenu/CMakeLists.txt
+++ b/src/MainMenu/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿target_sources (LodeRunner PRIVATE
+﻿target_sources (LodeRunner PRIVATE "MainMenu.cpp"
                                   )
                                    
                                    
