--- a/src/AbstractClases/CMakeLists.txt
+++ b/src/AbstractClases/CMakeLists.txt
@@ -1,9 +1,9 @@
 ﻿target_sources (LodeRunner PRIVATE
-                                     "Screens.cpp"
+                                     "State.cpp"
                                      "Object.cpp"
                                      "StaticObject.cpp"
                                      "DynamicObject.cpp"
                                      "MovementController.cpp"
                                      "Consumables.cpp"
-                                     "Button.cpp"
+                               
                                   )
