--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,16 +16,20 @@ add_subdirectory (include/Enemy/)
 add_subdirectory (include/AbstractClases/)
 add_subdirectory (include/EndGame/)
 add_subdirectory (include/Game/)
-add_subdirectory (include/MainMenu/)
 add_subdirectory (include/Player/)
+add_subdirectory (include/Menues/)
+add_subdirectory (include/Menues/Components)
+add_subdirectory (include/Menues/MainMenu/)
 
 add_subdirectory (src)
 add_subdirectory (src/AbstractClases/)
 add_subdirectory (src/Enemy/)
 add_subdirectory (src/EndGame/)
 add_subdirectory (src/Game/)
-add_subdirectory (src/MainMenu/)
 add_subdirectory (src/Player/)
+add_subdirectory (src/Menues/)
+add_subdirectory (src/Menues/Components)
+add_subdirectory (src/Menues/MainMenu/)
 
 add_subdirectory (resources)
 
