--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,10 @@ add_subdirectory (include/Enemy/)
 add_subdirectory (include/AbstractClases/)
 add_subdirectory (include/EndGame/)
 add_subdirectory (include/Game/)
+add_subdirectory (include/Game/GameObject/)
 add_subdirectory (include/Player/)
 add_subdirectory (include/Menues/)
-add_subdirectory (include/Menues/Components)
+add_subdirectory (include/Menues/Components/)
 add_subdirectory (include/Menues/MainMenu/)
 
 add_subdirectory (src)
@@ -26,6 +27,7 @@ add_subdirectory (src/AbstractClases/)
 add_subdirectory (src/Enemy/)
 add_subdirectory (src/EndGame/)
 add_subdirectory (src/Game/)
+add_subdirectory (src/Game/GameObject/)
 add_subdirectory (src/Player/)
 add_subdirectory (src/Menues/)
 add_subdirectory (src/Menues/Components)
