--- a/src/Enemy/CMakeLists.txt
+++ b/src/Enemy/CMakeLists.txt
@@ -1,8 +1,11 @@
 ﻿target_sources (LodeRunner PRIVATE
+                                     "Algo.cpp"
                                      "Enemy.cpp"
                                      "EnemyContorller.cpp"
-                                      "OneSide.cpp"
+                                     "OneSide.cpp"
                                      "RandomPath.cpp"
-                                     "Astar.cpp"
+                                    # "Astar.cpp"
                                      "Tile.cpp"
+                                     "Graph.cpp"
+                                     "Node.cpp"
                                   )
