singleton clock and timer print

--- a/src/AbstractClases/CMakeLists.txt
+++ b/src/AbstractClases/CMakeLists.txt
@@ -1,4 +1,5 @@
 ﻿target_sources (LodeRunner PRIVATE
+                                     "Clock.cpp"    
                                      "Music.cpp"
                                      "State.cpp"
                                      "MovementController.cpp"
