--- a/audio/CMakeLists.txt
+++ b/audio/CMakeLists.txt
@@ -3,3 +3,4 @@ configure_file ("eating laffa.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("running.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("drinking.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("ladder.OGG"${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("rope.OGG"${CMAKE_BINARY_DIR} COPYONLY)
