--- a/src/Enemy/CMakeLists.txt
+++ b/src/Enemy/CMakeLists.txt
@@ -4,7 +4,7 @@
                                      "EnemyContorller.cpp"
                                      "OneSide.cpp"
                                      "RandomPath.cpp"
-                                    # "Astar.cpp"
+                                     "Bfs.cpp"
                                      "Tile.cpp"
                                      "Graph.cpp"
                                      "Node.cpp"
