patched the digging

--- a/src/Game/GameObject/CMakeLists.txt
+++ b/src/Game/GameObject/CMakeLists.txt
@@ -1,4 +1,5 @@
 ﻿target_sources (LodeRunner PRIVATE
+                                     #"Hole.cpp"
                                      "Object.cpp"
                                      "StaticObject.cpp"
                                      "DynamicObject.cpp"
