--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -37,3 +37,4 @@ configure_file ("./buttons/play_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/arrow.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/setting_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/reset_b.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/wasted.png" ${CMAKE_BINARY_DIR} COPYONLY)
