--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -33,8 +33,17 @@ configure_file ("./hud pngs/time.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./hud pngs/lvl.png" ${CMAKE_BINARY_DIR} COPYONLY)
 
 
-configure_file ("./buttons/play_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("./buttons/arrow.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/back_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/continue.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/exit_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/main_menu_png.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/play.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/play_again_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/reset_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/scoreboard.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/reset_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/setting_button.png" ${CMAKE_BINARY_DIR} COPYONLY)
-configure_file ("./buttons/reset_b.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/wasted.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/arrow.png" ${CMAKE_BINARY_DIR} COPYONLY)
+
+configure_file ("./buttons/background_main.png" ${CMAKE_BINARY_DIR} COPYONLY)
