gettign ready for presentation

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -48,3 +48,4 @@ configure_file ("./buttons/arrow.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/background_main.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/pause.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("./buttons/victory.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("./buttons/busted.png" ${CMAKE_BINARY_DIR} COPYONLY)
