--- a/src/Player/CMakeLists.txt
+++ b/src/Player/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿target_sources (LodeRunner PRIVATE   "Player.cpp"
                                      "PlayerController.cpp"
+                                     "Lives.cpp"
                                   )
                                    
                                    
