--- a/audio/CMakeLists.txt
+++ b/audio/CMakeLists.txt
@@ -4,3 +4,5 @@ configure_file ("running.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("drinking.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("ladder.OGG"${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("rope.OGG"${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("hurt.OGG"${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("busted.OGG"${CMAKE_BINARY_DIR} COPYONLY)
